# ChangeLog for www-apps/gallery3
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*gallery3-3.0.2 (23 Feb 2012)

  23 Feb 2012; Bernard Cafarelli <voyageur@gentoo.org> +gallery3-3.0.2.ebuild,
  +metadata.xml:
  Initial version
