@@ -1,5 +1,5 @@
 || ( virtual/httpd-cgi virtual/httpd-fastcgi ) virtual/httpd-php >=app-admin/webapp-config-1.50.15
->=dev-db/mysql-5.0 >=dev-lang/php-5.3[ctype,gd?,filter,iconv,json,simplexml,tokenizer] >=www-servers/apache-2.2 imagemagick? ( || ( media-gfx/imagemagick media-gfx/graphicsmagick[imagemagick] ) ) virtual/httpd-php >=app-admin/webapp-config-1.50.15
+>=dev-db/mysql-5.0 >=dev-lang/php-5.2.3[ctype,gd?,filter,iconv,json,mysql?,mysqli?,simplexml,tokenizer] >=www-servers/apache-2.2 imagemagick? ( || ( media-gfx/imagemagick media-gfx/graphicsmagick[imagemagick] ) ) virtual/httpd-php >=app-admin/webapp-config-1.50.15
 3.0.2
 mirror://sourceforge/gallery/gallery-3.0.2.zip
 
@@ -8,8 +8,8 @@ GPL-2
 Web based photo album organizer
 ~amd64 ~x86
 depend.php eutils multilib phpconfutils portability toolchain-funcs user webapp
-+gd imagemagick vhosts
-|| ( gd imagemagick )
++gd imagemagick mysql mysqli vhosts
+|| ( gd imagemagick ) || ( mysql mysqli )
 
 
 4
