@@ -1,4 +1,4 @@
 DIST gallery-3.0.2.zip 1848347 RMD160 bc6c716ebaec06ca11151c41b191a2ca0e21e9fa SHA1 210f0599a797035dfa59edb326d0bf1a3986f25d SHA256 398677f4a078458183375f88118baba77adb9a2aff7de3a46ed22cba13e215a9
-EBUILD gallery3-3.0.2.ebuild 876 RMD160 47a675a9e5f6b75a4e3a50d417000dcad198ab25 SHA1 52aa1becf7de34eebc218cc6ce04c196fe2c8342 SHA256 55bbe48f5a292349fa09e3b20ff1a46f7dd06b1e4c8662b7dcf069dc5fe49d89
-MISC ChangeLog 264 RMD160 3850e3a7c8c09bb4d5113ed7e6f30fbb8b33179d SHA1 b57b79c173d503d7bd36755f0558866b83e9331c SHA256 c811ca9b41eb9effed0129e64e3796f90e73bab06808bcc2fc439d4e84b80b6b
+EBUILD gallery3-3.0.2.ebuild 927 RMD160 5501cd63b4ba8335a909f3521957ebdc444046cf SHA1 f3c69b1a234646d5def9079ae47d64f445391263 SHA256 d3b2da9aa2959bb20bda19afc5fb3b244831cfec95aeb0ff8464a376597bb5d0
+MISC ChangeLog 387 RMD160 a3f9e6fbdb16cc6d573871273569d4fb5e166a5d SHA1 521611253ad26e44bc4e183f71f83ae15ff4a182 SHA256 a42c737d6eb774cfd71b512550835e57d8196d92249a3d2a439b9b5b973a9560
 MISC metadata.xml 238 RMD160 35d97a943cd10fa2450f70abc4c6bcd5cc15741b SHA1 50be4bf9710b8af653101dd8c3c2df01c90f8d04 SHA256 325bc955f2a5e5f2ed4b013fb6ec3ab8308fa98e84ce1c503f6a78bf42f3234e
