@@ -2,6 +2,9 @@
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  26 Feb 2012; Bernard Cafarelli <voyageur@gentoo.org> gallery3-3.0.2.ebuild:
+  Add USE-deps to php, including mysql ones
+
 *gallery3-3.0.2 (23 Feb 2012)
 
   23 Feb 2012; Bernard Cafarelli <voyageur@gentoo.org> +gallery3-3.0.2.ebuild,
